1. 뷰를 꾸몄다.